# whittle

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  dev_setup.sh  lora_merging.py  mkdocs.yaml  profile_models.sh  pyproject.toml  release.sh  requirements.txt  setup.py  test_out.txt  versions.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  pre-commit.yml  release.yml  run-examples.yml  test-docs.yaml  unit-test.yml
0.0.1/: 404.html  index.html  objects.inv
0.0.1/contributing/: index.html
0.0.1/search/: search_index.json
0.1.3/: 404.html  index.html  objects.inv
0.1.3/contributing/: index.html
0.1.3/search/: search_index.json
0.3.0/: 404.html  index.html  objects.inv
0.3.0/contributing/: index.html
0.3.0/search/: search_index.json
0.4.1/: 404.html  index.html  objects.inv
0.4.1/contributing/: index.html
0.4.1/search/: search_index.json
0.5.0/: 404.html  index.html  objects.inv
0.5.0/contributing/: index.html
0.5.0/search/: search_index.json
0.5.1/: 404.html  index.html
0.5.1/contributing/: index.html
0.5.1/search/: search_index.json
benchmarks/gpt/: check_extraction.py  distribution_tokens.py  generate_cmds.py  requirements.txt  run_lm_eval_harness.py  save_sub_networks.py
benchmarks/plm_pruning/: bert.py  estimate_efficency.py  hf_args.py  model_data.py  requirements.txt  run_from_scratch_nas.py  run_nas.py  run_offline_search.py  search_spaces.py  train_supernet.py
benchmarks/sinc/: estimate_efficiency.py  model.py  search.py  sinc_nas.py
changelog-output/: changelog-increment.md
docs/: index.md  tutorials.md
docs/_scripts/: api_generator.py  clean_log_output.py
examples/fashion_mnist/: model.py  readme.md  search_fashion_mnist.py  train_fashion_mnist.py
examples/profile/: profile_flops.py  profile_latency.py  visualize_tps_profiler.py
examples/sinc/: estimate_efficiency.py  model.py  search.py  sinc_nas.py
litgpt/scripts/: convert_hf_checkpoint.py
litgpt_utils/: base_model.py  utils.py
litgpt_utils/scripts/: convert_hf_checkpoint.py  convert_lit_checkpoint.py  convert_pretrained_checkpoint.py  download.py
lobotomy/: estimate_efficency.py  extract_subnetworks.py  magnitude.py  sampler.py  training_strategies.py
lobotomy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lobotomy/loss/: __init__.py  kd_loss.py
lobotomy/metrics/: magnitude.py  parameters.py
lobotomy/modules/: embedding.py  layernorm.py  linear.py  lmhead.py  rmsnorm.py  rotary_embedding.py
lobotomy/sampling/: __init__.py  random_sampler.py
lobotomy/search/: __init__.py  ask_tell_scheduler.py  baselines.py  local_search.py  multi_objective.py  search.py
lobotomy/training_strategies/: __init__.py  ats.py  base_strategy.py  random.py  random_linear.py  sandwich.py  sandwich_kd.py  standard.py
lobotomy/utils/: auto_search_config.py
plotting/: compute_hv.py  generate_data_relative_to_model_size.py  plot_error_over_size.py  plot_hypervolume_across_checkpoints.py  plot_hypervolume_across_methods.py  plot_hypervolume_across_search_spaces.py
src/: compute_importance.py
src/compute_latencies/: compute_latencies.py  compute_latencies_ours.py
src/evaluate/: evaluate_galore.py  evaluate_last_layer_ft.py  evaluate_lora.py  evaluate_slm_baselines.py  search.py  search_lora.py
src/finetuning/: fine_tuning.py  fine_tuning_galore.py  fine_tuning_last_layer.py  sandwich.py  sandwich_kd.py  standard.py  standard_slm.py
src/utils/: sampler.py  search_spaces.py  train_args.py  utils.py  utils_eval.py
test/: config_coarse.json  config_finegrained.json  conftest.py  test_api.py  test_attention.py  test_checkpoint_loading.py  test_cli.py  test_convert_to_litgpt.py  test_distill_loss.py  test_distillation.py  test_efficiency.py  test_embedding.py  test_eval.py  test_evaluate.py  test_extract.py  test_flops.py  test_full_finetune.py  test_linear.py  test_lmhead.py  test_lora_attention.py  test_lora_block.py  test_lora_embedding.py  test_lora_gpt.py  test_lora_linear.py  test_lora_merge.py  test_lora_mlp.py  test_lora_qkv_linear.py  test_mag.py  test_mag_pruning.py  test_magnitude.py  test_masking.py  test_mlp.py  test_model.py  test_model_checkpoint.py  test_norms.py  test_parameters.py  test_pretrain_super_network.py  test_prune.py  test_pruners.py  test_sampling.py  (+6 more)
test/litgpt_model_tests/: test_attention.py  test_embedding_super.py  test_embeddings_super.py  test_linear_super.py  test_lmhead_super.py  test_mlp.py  test_model.py  test_norms_super.py  test_transformer_block.py
whittle/: __init__.py  __main__.py  args.py  convert.py  convert_to_litgpt.py  distill.py  evaluate_network.py  exceptions.py  extract_subnetworks.py  finetune.py  full_finetune.py  lora.py  lora_super_network.py  pretrain.py  pretrain_super_network.py  prune.py  search_sub_networks.py  store_teacher_logits.py  version
whittle/baselines/: ablate.py  data.py  magnitude_structured.py  prune_sparsegpt.py  pruner.py  test.ipynb  wanda_structured.py
whittle/data/: llamamini.py
whittle/distillation/: create_student_data.py  distill.py  distill_student.py  distill_subnetwork.py  knowledge_distill.py  utils.py  utils_new.py
whittle/eval/: utils.py  whittle_llms.py
whittle/lora/: config.py  lora_attention.py  lora_block.py  lora_embedding.py  lora_gpt.py  lora_linear.py  lora_mlps.py  lora_qkv_linear.py  merge.py  utils.py
whittle/lora_model/: config.py  lora_attention.py  lora_block.py  lora_embedding.py  lora_gpt.py  lora_linear.py  lora_mlps.py  lora_qkv_linear.py  merge.py
whittle/loss/: __init__.py  kd_loss.py  losses.py
whittle/metrics/: __init__.py  flops.py  latency.py  mag.py  magnitude.py  parameters.py  profiler.py
whittle/modules/: __init__.py  embedding.py  layernorm.py  linear.py  rmsnorm.py
whittle/pruning/: __init__.py
whittle/prunning/: data.py  layerwrapper.py  magnitude_structured.py  prune_sparsegpt.py  pruner.py  pruners.py  sparsegpt.py  wanda_structured.py
whittle/sampling/: __init__.py  grid_samplers.py  (+4 more)
(+350 files in other folders)
